--- a/data/sources/webexpo.yaml
+++ b/data/sources/webexpo.yaml
@@ -1,2 +1,58 @@
 series:
   url: https://www.webexpo.net/
+  meetupcom:
+    url: https://www.meetup.com/WebExpo/
+    meta_description: WebExpo is Central Europe's largest conference covering deep tech & practical topics for developers, designers, product managers, and marketers.We are the web event of the year! The best conference fo
+    og_title: WebExpo (Prague, Czech Republic)
+    image: https://secure.meetupstatic.com/photos/event/d/7/b/9/600_483715225.jpeg
+  events:
+  - meetupcom:
+      meta_description: 'Tue, Sep 21, 2021, 10:00 AM: WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers, and marketers.We''re '
+      og_title: WebExpo 2021
+      image: https://secure.meetupstatic.com/photos/event/b/3/d/d/600_497506045.jpeg
+      url: https://www.meetup.com/WebExpo/events/267898993/
+      ical:
+        summary: WebExpo 2021
+        description: 'WebExpo
+
+          Tuesday, September 21 at 10:00 AM
+
+
+          WebExpo is Central Europe''s largest conference covering deep tech & practical topics for developers, UX professionals & researchers, product managers,...
+
+
+          https://www.meetup.com/WebExpo/events/267898993/'
+        location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_267898993@meetup.com
+        url: https://www.meetup.com/WebExpo/events/267898993/
+        dtstart: 2021-09-21 10:00:00+02:00
+        dtend: 2021-09-23 18:00:00+02:00
+  - meetupcom:
+      meta_description: 'Fri, Sep 20, 2019, 9:45 AM: We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''re a rich community of'
+      og_title: WebExpo 2019
+      image: https://secure.meetupstatic.com/photos/event/d/9/d/c/600_483715772.jpeg
+      url: https://www.meetup.com/WebExpo/events/263721184/
+      ical:
+        summary: WebExpo 2019
+        description: 'WebExpo
+
+          Friday, September 20 at 9:45 AM
+
+
+          We are the web event of the year! The best conference for devs, UX professionals, designers, and marketers to meet up and share their experiences. We''...
+
+
+          https://www.meetup.com/WebExpo/events/263721184/'
+        location: Palace Lucerna (Vodičkova 704/36, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_263721184@meetup.com
+        url: https://www.meetup.com/WebExpo/events/263721184/
+        dtstart: 2019-09-20 09:45:00+02:00
+        dtend: 2019-09-22 18:00:00+02:00
