data: maker faire

--- a/data/sources/coderetreat-cz.yaml
+++ b/data/sources/coderetreat-cz.yaml
@@ -71,7 +71,7 @@ series:
 
 
           https://www.meetup.com/CodeRetreat-CZ/events/265313497/'
-        location: Quadient Technologies Czech s.r.o. (, Olomouc, Czech Republic 779 00)
+        location: Quadient Technologies Czech s.r.o. (tř. Kosmonautů 1338/1a, Olomouc, Czech Republic 779 00)
         geo:
           lat: 50.08
           lon: 14.43
