--- a/data/sources/vuejs-cz-sk.yaml
+++ b/data/sources/vuejs-cz-sk.yaml
@@ -104,3 +104,27 @@ series:
         url: https://www.meetup.com/vuejs-cz-sk/events/267453445/
         dtstart: 2020-01-22 18:30:00+01:00
         dtend: 2020-01-22 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 6, 2021, 6:30 PM: Registrace na event tady: https://www.eventbrite.com/e/vuejs-meetup-brno-6-tickets-175523534617Tentokrát se potkáme konečně naživo, opět nad zajímavými tématy z Vue.js vesmí'
+      og_title: 'Vue.js Meetup Brno #6'
+      image: https://secure.meetupstatic.com/photos/event/5/9/b/4/600_495982964.jpeg
+      url: https://www.meetup.com/vuejs-cz-sk/events/280895996/
+      ical:
+        summary: 'Vue.js Meetup Brno #6'
+        description: 'Vue.js CZ/SK
+
+          Wednesday, October 6 at 6:30 PM
+
+
+          Registrace na event tady: https://www.eventbrite.com/e/vuejs-meetup-brno-6-tickets-175523534617 Tentokrát se potkáme konečně naživo, opět nad zajímavý...\n
+
+          https://www.meetup.com/vuejs-cz-sk/events/280895996/'
+        location: Music Lab (Opletalova 1, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280895996@meetup.com
+        url: https://www.meetup.com/vuejs-cz-sk/events/280895996/
+        dtstart: 2021-10-06 18:30:00+02:00
+        dtend: 2021-10-06 20:30:00+02:00
