--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -128,3 +128,28 @@ series:
         url: https://www.meetup.com/Morning-Talks/events/277807380/
         dtstart: 2021-06-23 09:00:00+02:00
         dtend: 2021-06-23 11:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 13, 2021, 9:00 AM: REGISTRACE ZDE: https://www.datascript.cz/morning-talks/aws-naklady-prakticke-postrehy-na-co-si-dat-pozor/Na co se můžete těšit:Amazon AWS je jedno z nejpoužívanějších clou'
+      og_title: AWS náklady – praktické postřehy na co si dát pozor
+      image: https://secure.meetupstatic.com/photos/event/5/1/f/e/600_498560990.jpeg
+      url: https://www.meetup.com/Morning-Talks/events/280508477/
+      ical:
+        summary: AWS náklady – praktické postřehy na co si dát pozor
+        description: 'Morning Talks
+
+          Wednesday, October 13 at 9:00 AM
+
+
+          REGISTRACE ZDE: https://www.datascript.cz/morning-talks/aws-naklady-prakticke-postrehy-na-co-si-dat-pozor/ Na co se můžete těšit:Amazon AWS je jedno z...
+
+
+          https://www.meetup.com/Morning-Talks/events/280508477/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_280508477@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/280508477/
+        dtstart: 2021-10-13 09:00:00+02:00
+        dtend: 2021-10-13 10:00:00+02:00
